# glimra

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.sh  gleam.toml  manifest.toml
.cargo/: config.toml
.github/: test.yml
.github/workflows/: release.yml  test.yml
birdie_snapshots/: test_bash_syntax_highlighting.accepted  test_c_syntax_highlighting.accepted  test_css_syntax_highlighting.accepted  test_custom_block_class.accepted  test_custom_line_class.accepted  test_default_theme_to_css.accepted  test_djot_syntax_highlighting.accepted  test_elixir_syntax_highlighting.accepted  test_erlang_syntax_highlighting.accepted  test_gleam_syntax_highlighting.accepted  test_go_syntax_highlighting.accepted  test_html_syntax_highlighting.accepted  test_javascript_syntax_highlighting.accepted  test_json_syntax_highlighting.accepted  test_python_syntax_highlighting.accepted  test_rust_syntax_highlighting.accepted  test_syntax_highlighter_to_css.accepted  test_syntax_highlighter_with_line_numbers_to_css.accepted
native/glans/: Cargo.toml  README.md
native/libglans/: Cargo.toml
native/libglans/.cargo/: config.toml
native/libglans/src/: libglans.rs
native/libglimra/: Cargo.toml
priv/: libglans.dylib
src/: glans.gleam  glimra.gleam  libglans.erl  libglimra.erl
src/glimra/: theme.gleam
test/: glans_test.gleam  glimra_test.gleam
test/snippets/: snippet.bash  snippet.c  snippet.css  snippet.dj  snippet.erlang_file  snippet.ex  snippet.gleam_file  snippet.go  snippet.html  snippet.js  snippet.json  snippet.py  snippet.rs  snippet.ts
(+4 files in other folders)
